--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@ http://www.templatemo.com/tm-467-easy-profile
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
-				<img src="images/tm-easy-profile.jpg" class="img-responsive img-circle tm-border" alt="templatemo easy profile">
+				<img src="images/yamu 1.jpg" class="img-responsive img-circle tm-border" alt="Yamini">
 				<hr>
-				<h1 class="tm-title bold shadow">Hi, I am Julia</h1>
-				<h1 class="white bold shadow">Creative Director</h1>
+				<h1 class="tm-title bold shadow">Hi , I'm Yamini</h1>
+				<h1 class="white bold shadow">Student</h1>
 			</div>
 		</div>
 	</div>
@@ -84,8 +84,8 @@ http://www.templatemo.com/tm-467-easy-profile
 					<div class="education-content">
 						<h4 class="education-title accent">New Web Design</h4>
 							<div class="education-school">
-								<h5>School of Media</h5><span></span>
-								<h5>2030 January - 2034 December</h5>
+								<h5>MIC College</h5><span></span>
+								<h5>2018 August - 2022 August</h5>
 							</div>
 						<p class="education-description">In lacinia leo sed quam feugiat, ac efficitur dui tristique. Ut venenatis, odio quis cursus egestas, nulla sem volutpat diam, ac dapibus nisl ipsum ut ipsum. Nunc tincidunt libero non magna placerat elementum.</p>
 					</div>
@@ -95,10 +95,10 @@ http://www.templatemo.com/tm-467-easy-profile
 			<div class="languages">
 				<h2>Languages</h2>
 					<ul>
-						<li>Myanmar / Thai</li>
-						<li>English / Spanish</li>
-						<li>Chinese / Japanese</li>
-						<li>Arabic / Hebrew</li>
+						<li>English </li>
+						<li>Telugu</li>
+						<li>Hindi</li>
+						<li>Korean</li>
 					</ul>
 			</div>
 		</div>
@@ -111,10 +111,10 @@ http://www.templatemo.com/tm-467-easy-profile
 		<div class="col-md-4 col-sm-12">
 			<div class="contact">
 				<h2>Contact</h2>
-					<p><i class="fa fa-map-marker"></i> 123 Rama IX Road, Bangkok</p>
+					<p><i class="fa fa-map-marker"></i>Vijayawada</p>
 					<p><i class="fa fa-phone"></i> 010-020-0890</p>
-					<p><i class="fa fa-envelope"></i> easy@company.com</p>
-					<p><i class="fa fa-globe"></i> www.company.com</p>
+					<p><i class="fa fa-envelope"></i> yamininagastya@gmail.com</p>
+					<p><i class="fa fa-globe"></i>www.google.com</p>
 			</div>
 		</div>
 		<div class="col-md-8 col-sm-12">
